<resources>
    <string name="app_name">Jumpstar</string>

    <!-- navigation -->
    <string name="title_home">Home</string>
    <string name="title_trainingsPlans">Plans</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_settings">Settings</string>

    <string name="centimeters_short">cm</string>
    <string name="inches_short">inches</string>
    <string name="reach_height_input_hint">Your reach in %1$s</string>
    <string name="reach_height_input_error">Invalid Input</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_buy">%1$s buy</string>

    <!-- Home -->
    <string name="start_current_trainingsPlan">Start</string>
    <string name="info_current_trainingsPlan">Info</string>
    <string name="vertical_progress_title">Jump height</string>
    <string name="vertical_progress_add">Add</string>
    <string name="vertical_progress_input_hint">Enter your vertical reach</string>
    <string name="vertical_progress_info_hint">Info</string>
    <string name="vertical_progress_info_show_youtube_video">This diagram tracks your jump progress. Do you want to watch a video explaining how to measure your jump height correctly?</string>
    <string name="add_current_trainings_plan_text">Select a trainings plan and start your training.</string>
    <string name="add_current_trainings_plan_Select">Select</string>
    <string name="select_current_trainingsplan_title">Select a trainings plan</string>

    <string name="exercise_info">Info</string>
    <string name="exercise_sets">Sets: %1$s</string>
    <string name="exercise_equipment">Equipment</string>
    <string name="exercise_equipment_none">No equipment needed</string>
    <string name="exercise_repetitions">Repetition: %1$s</string>
    <string name="exercise_repetitions_standard_as_much">Repetition: As much as possible per set</string>
    <string name="exercise_category">Category:</string>
    <string name="time_exercise_prepare">Get ready!</string>
    <string name="time_exercise_start">Start</string>
    <string name="time_exercise_pause">Pause</string>
    <string name="time_exercise_resume">Resume</string>
    <string name="time_exercise_hold_time">Time: %1$s</string>
    <string name="minutes_short">min</string>
    <string name="time_exercise_hold_time_as_much">Hold time: As long as possible per set</string>

    <string name="no_trainingsplan_found">No training plans found for your available equipment. You can change your available equipment under settings/available equipment.</string>
    <!-- current_trainingsplan_menu -->
    <string name="remove">Remove</string>

    <!-- Preferences -->
    <string name="preferences_home_screen">Home screen</string>
    <string name="preferences_show_vertical_progress_title">Show vertical progress</string>
    <string name="preferences_show_exercise_description_title">Show exercise description</string>
    <string name="preferences_training_title">Training</string>
    <string name="preferences_trainingsPlan_preparationTime">Preparation time</string>
    <string name="preferences_equipment_title">Available equipment</string>
    <string name="preferences_equipment_home">Home</string>
    <string name="preferences_equipment_gym">Gym</string>
    <string name="preferences_unit_local_title">Measurement system</string>
    <string name="preferences_goal_title">Your jump height goal</string>
    <string name="preferences_legal_title">Legal</string>
    <string name="preferences_privacy_policy">Privacy policy</string>


    <!-- TrainingsPlanDetail-->
    <string name="detail_add_trainings_plan">Add Trainings plan</string>
    <string name="detail_plan_general">General</string>
    <string name="detail_plan_estimated_time_title">Duration:</string>
    <string name="detail_plan_estimated_time">%1$s h</string>
    <string name="detail_exercises_title">Exercises</string>
    <string name="detail_exercises_plyometric">Plyometric:</string>
    <string name="detail_exercises_strength">Strength:</string>
    <string name="detail_exercises_stretch">Stretch:</string>
    <string name="detail_exercises_warmup">Warmup:</string>
    <string name="detail_buy_trainingsplan">Buy plan</string>

    <string name="detail_buy_trainingsplan_with_price">%1$s buy plan</string>
    <string name="detail_buy_premium_with_price">%1$s buy premium</string>
    <string name="detail_description_default">Custom created plan</string>

    <string name="plan_chooser_predefined_plans">Predefined plans</string>
    <string name="plan_chooser_own_plans">Own plans</string>


    <!-- Exercise Overview -->
    <string name="create_new_plan_dialog_title">New plan</string>
    <string name="create_new_plan_dialog_missing_name">Please enter a name for your plan</string>
    <string name="create_new_plan_name_hint">Plan name</string>
    <string name="create_new_plan_name">Plan: %1$s</string>
    <string name="create_new_plan_exercise_added">Exercise: %1$s added!</string>
    <string name="create_new_plan_description_hint">Plan description</string>
    <string name="create_new_plan_save">Save</string>
    <string name="create_new_plan_cancel">Cancel</string>
    <string name="create_new_plan_undo">Undo</string>
    <string name="create_new_plan_plan_created">Plan created!</string>
    <string name="create_new_plan_info_title">Add Exercises</string>
    <string name="create_new_plan_info_description">Click on "+" to add the exercise to your new plan. Click on the "save" button when you are done!</string>

    <string name="buy_premium_dialog_title">Premium needed</string>
    <string name="buy_premium_dialog_text">To add more than one custom plan please buy premium or delete your current custom plan.</string>
    <string name="buy_premium_dialog_success">Your purchase was successful!</string>
    <string name="buy_premium_dialog_fail">Your purchase failed!</string>
    <string name="buy_error">An error occurred while processing your purchase!</string>
</resources>
