<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="PREFERENCES_FILE_KEY">

    <PreferenceCategory
        android:title="@string/preferences_home_screen">

        <SwitchPreferenceCompat
            android:key="show_vertical_progress"
            android:title="@string/preferences_show_vertical_progress_title"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="goal"
            android:title="@string/preferences_goal_title"
            android:inputType="numberDecimal"
            />

        <ListPreference
            android:key="unit_local"
            android:title="@string/preferences_unit_local_title"
            android:defaultValue="@string/unit_local_default"
            android:entries="@array/unit_locals"
            android:entryValues="@array/unit_locals_values"
            android:summary="%s"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_training_title"
        android:layout="@layout/preference_category">

        <ListPreference
            android:key="preferences_trainingsPlan_preparationTime"
            android:title="@string/preferences_trainingsPlan_preparationTime"
            android:defaultValue="@string/preparation_times_default"
            android:entries="@array/preparation_times"
            android:entryValues="@array/preparation_times_values"
            android:summary="%s"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_equipment_title">
        <CheckBoxPreference
            android:key="preference_equipment_home"
            android:title="@string/preferences_equipment_home"
            android:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="preference_equipment_gym"
            android:title="@string/preferences_equipment_gym"
            android:defaultValue="true">
        </CheckBoxPreference>
    </PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>