<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.steinbacher.jumpstar.TrainingsPlanDetailActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_trainings_plan_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/card_margins_content"
            android:layout_marginTop="@dimen/card_margins_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/card_margins_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="80sp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:layout_margin="@dimen/card_margins_content" />

            <TextView
                android:id="@+id/detail_trainings_plan_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margins_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <!-- estimated time -->
        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/section_general"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/card_margins_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginTop="@dimen/card_margins_content"
                android:layout_marginLeft="@dimen/card_margins_content"
                android:layout_marginBottom="@dimen/card_margins_content"
                android:textColor="@color/colorAccent"
                android:text= "@string/detail_plan_general" />

            <View style="@style/Divider"
                android:layout_marginBottom="@dimen/card_margins_content"/>

            <android.support.v7.widget.LinearLayoutCompat
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/detail_plan_estimated_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_plan_estimated_time_title"
                    android:layout_marginLeft="@dimen/card_margins_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/detail_plan_estimated_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margins_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

        <com.steinbacher.jumpstar.view.EquipmentView
            android:id="@+id/equipment_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/card_margins_content" />

        <com.steinbacher.jumpstar.view.ExercisesView
            android:id="@+id/detail_trainings_plan_exercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/card_margins_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/detail_button_add_trainings_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/card_margins_content"
            android:text="@string/detail_add_trainings_plan"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/buy_plan_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/detail_button_buy_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/card_margins_content"
                android:layout_weight="1"
                android:text="@string/detail_buy_trainingsplan_with_price"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/detail_button_buy_premium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/card_margins_content"
                android:layout_weight="1"
                android:text="@string/detail_buy_premium_with_price"/>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>
